--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-table": "^8.10.1",
+    "@uidotdev/usehooks": "^2.3.1",
     "antd": "^5.9.2",
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
