--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,23 @@
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
+    "plotly.js": "^2.26.1",
     "react": "^18.2.0",
+    "react-chart-editor": "^0.46.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.4.2",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.16.0",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.1",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.6.3",
+    "@types/plotly.js": "^2.12.27",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-grid-layout": "^1.3.3",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
